--- a/sections/ad/8_conclusion.tex
+++ b/sections/ad/8_conclusion.tex
@@ -1,5 +1,5 @@
 \section{Summary}
-In this paper, we introduced \animatedead{}, a PHP emulator capable of analyzing web applications with abstract inputs. 
+In this chapter, we introduced \animatedead{}, a PHP emulator capable of analyzing web applications with abstract inputs. 
 We presented the design details of its concolic execution engine and reviewed our approach to building a distributed analysis framework. 
 
 Recognizing the practical limitation of dynamic debloating systems, namely their need for extensive training data and their high runtime overhead, 
