--- a/sections/chapter_three_lim.tex
+++ b/sections/chapter_three_lim.tex
@@ -22,7 +22,7 @@ and we show that we can produce functional web applications that are 46\%
 smaller than their original versions and exhibit half their original cyclomatic
 complexity. Moreover, our results show that the process of debloating removes
 code associated with tens of historical vulnerabilities and further shrinks
-a web application's attack-surface by removing unnecessary external packages
+a web application's attack surface by removing unnecessary external packages
 and abusable PHP gadgets.
 
 % The remainder of this chapter is replicated from the paper titled ``Less is More: Quantifying the Security Benefits of Debloating Web Applications'' which was published in the proceedings of the 28th Usenix Security Symposium in 2019. 
