--- a/sections/dbltr/debloatingresults.tex
+++ b/sections/dbltr/debloatingresults.tex
@@ -18,7 +18,7 @@ for key, value in pairs(cookies) do
 \section{Debloating Results}
 \label{sec:debloatingresults}
 
-In this section, we measure the debloating performance of our system and demonstrate its ability to reduce the attack-surface of web applications beyond the previous work. 
+In this section, we measure the debloating performance of our system and demonstrate its ability to reduce the attack surface of web applications beyond the previous work. 
 Next, we compare the debloating results of \dbltr{} and quantify its improvements over the baseline model through source code metrics such as LLOC reduction, as well as security metrics, namely CVE, gadget chain, and CAC reductions. 
 % Historically, research papers demonstrated the attack-surface reduction of debloating schemes via the reduction in size of debloated applications.
 % Other studies report the removal of historic CVEs and gadget chains as a means to measure the security gains of debloated applications. 
