--- a/sections/lim/parts/conclusion.tex
+++ b/sections/lim/parts/conclusion.tex
@@ -32,7 +32,7 @@ gadgets and perform POI attacks.
 
 Our results demonstrate that debloating web applications
 provides tangible security benefits and therefore should be seriously
-considered as a practical way of reducing the attack-surface of
+considered as a practical way of reducing the attack surface of
 web applications deployments.
 
 % \vspace{0.5ex}
