--- a/sections/lim/parts/related.tex
+++ b/sections/lim/parts/related.tex
@@ -12,7 +12,7 @@ JavaScript~\cite{snyder2017vibrate}. The authors evaluated the use of different
 JavaScript APIs in the wild and proposed the use of a client-side extension
 which controls which APIs any given website would get access to, depending
 on that website's level of trust. Schwarz et al. similarly utilize a browser
-extension to limit the attack-surface of Chrome and show that they are able
+extension to limit the attack surface of Chrome and show that they are able
 to protect users against micro-architectural and side-channel
 attacks~\cite{Schwarz2018}. These studies are orthogonal to our work since
 they both focus on the client-side of the web platform, whereas we focus on
@@ -25,7 +25,7 @@ Boomsma et al. performed dynamic profiling of a custom web application
 authors measured the time it takes for their dynamic profile system to get
 complete coverage and the percentage of files that they could remove. Since the
 application was a custom one, the authors were not able to report specifics
-in terms of the reduction of the programs attack-surface, as that relates
+in terms of the reduction of the programs attack surface, as that relates
 to CVEs. Contrastingly, by focusing on popular web applications, and utilizing function-level as well as file-level debloating, we were
 able to precisely quantify the reduction of vulnerabilities, both in terms
 of known CVEs and gadgets for PHP object-injection attacks.
