--- a/sections/chapter_one_intro.tex
+++ b/sections/chapter_one_intro.tex
@@ -1,34 +1,34 @@
 \chapter{Introduction}
 
-The World Wide Web has become the de facto platform for online businesses, educational institutes and even government services. 
-The rapid growth in the online platforms is facilitated by the changes in the software development practices, most importantly development and wide use of off-the-shelf libraries~\cite{packagiststats, npmstatistics, pypi}. 
+The World Wide Web has become the de facto platform for online businesses, educational institutes and government services. 
+The rapid growth in the online platforms is facilitated by changes in software development practices, most importantly the development and wide use of off-the-shelf libraries~\cite{packagiststats, npmstatistics, pypi}. 
 % \red{CITE USAGE STATS}
 Given the importance of protecting online services against attackers, security researchers have explored proactive (e.g., static and dynamic code analysis to identify bugs~\cite{jovanovic2006pixy, dahse2010rips, alhuzali2018navex}, and 
-compartmentalization~\cite{vasilakis2018breakapp}) and reactive measures (e.g., web application firewalls, and honeypots~\cite{makiou2014improving, barron2021click}) have been proposed to protect web applications against attackers. 
+compartmentalization~\cite{vasilakis2018breakapp}) and reactive measures (e.g., web application firewalls, and honeypots~\cite{makiou2014improving, barron2021click}) to protect web applications against attackers. 
 
 Despite our advancements in securing web applications, new vulnerabilities are identified every day~\cite{cvedetails}. 
-The principle of the least privilege in security refers to the provision of minimal access to the required resources to limit future damage. 
+The principle of least privilege in security refers to the provision of minimal access to the required resources to limit future damage. 
 In the realm of web application security, this principle can be applied in the form of software debloating. 
-Software debloating refers to the identification of unused web application features and its removal, thereby, preventing the abuse from the vulnerabilities that reside in unused features. 
+Software debloating refers to the identification of unused web application features and their removal, thereby, preventing the abuse of vulnerabilities that reside in unused features. 
 
 On one hand, popular web applications have become monolithic platforms that serve a variety of features for a wide range of users, many of which remain unused by their users in each deployment of the applications. 
 On the other hand, third-party libraries commonly used to build web applications also suffer from the same generalizability, which essentially introduces unused code into the applications. 
-Nevertheless, attackers can still abuse the vulnerabilities in the unused code to gain control of the websites or exfiltrate user data~\cite{drupalVulenrability, zendVulnerability, phpunitVulnerability, PHPGGC}. 
+Nevertheless, attackers can still abuse vulnerabilities in the unused code to gain control of web applications and exfiltrate user data~\cite{drupalVulenrability, zendVulnerability, phpunitVulnerability, PHPGGC}. 
 In this dissertation, we propose debloating techniques for web applications to identify the unneeded code and remove it, thereby, protecting web applications against the exploitation of vulnerabilities that reside in unused features. 
 We explore dynamic and hybrid (i.e., based on concolic execution) debloating techniques and evaluate their effectiveness in protecting web applications. 
-To measure the performance of debloating schemes in reducing the attack-surface of web applications, we define various metrics such as the reduction of code size, removal of historic vulnerabilities and critical API calls. 
+To measure the performance of debloating schemes in reducing the attack surface of web applications, we define multiple metrics, such as, the reduction of code size, removal of historic vulnerabilities, and reduced usage of critical API calls. 
 
 
 
 \section{Thesis statement and contributions}
 
-Our thesis statement for this dissertation is that \textit{``Modern web applications expose themselves to an unnecessarily large attack-surface due to code-bloat. Software debloating can effectively identify and remove the unused code and therefore protect web applications against the exploitation of vulnerabilities that reside in the those modules.''}
+Our thesis statement for this dissertation is that \textit{``Modern web applications expose an unnecessarily large attack surface due to code-bloat. Software debloating can effectively identify and remove the unused code and therefore protect web applications against the exploitation of vulnerabilities that reside in the those modules.''}
 
-In this dissertation, we demonstrate the effectiveness of software debloating techniques in reducing the attack-surface of web applications through source code and security metrics. 
-Moreover, we design and develop frameworks to debloat popular web applications and quantify their effectiveness in reducing their attack-surface. The main contributions of this dissertation are as follows:
+In this dissertation, we demonstrate the effectiveness of software debloating techniques in reducing the attack surface of web applications through source code and security metrics. 
+Moreover, we design and develop frameworks to debloat popular web applications and quantify their effectiveness in reducing their attack surface. The main contributions of this dissertation are as follows:
 
 \begin{itemize}
-    \item We conduct an analysis on four popular PHP applications and characterize the source of code-bloat in them. After identifying the source of the bloat, we propose two dynamic debloating approaches, namely file and function level debloating and evaluate their effectiveness in removing severe security vulnerabilities and reducing the attack-surface of target web applications in Chapter~\ref{chap:lim}.
-    \item We propose the role-based debloating approach. We conduct a user study with 60 experienced administrators and developers to understand how different users of the same web application interact with various features. We demonstrate that the one-size-fits-all debloating provides access to unnecessary features for a substantial group of users. Therefore, we cluster users with similar usage behavior together and assign them to a role. By providing a content delivery platform based on reverse-proxies, we transparently route users to their respective debloated web applications. We present the results of this work in Chapter~\ref{chap:dbltr}. 
-    \item We characterize one of the main challenges of dynamic debloating systems as the collection of usage traces over long periods of time and the under-representation of unsuccessful code paths (e.g., failed login attempts) in these traces. To that end, we propose the use of concolic execution to explore code paths of PHP applications based on the requests from the web server logs. We build a system named \animatedead{} and use it to perform a module reachability analysis based on web application entry points. Using this information, we debloat web applications and demonstrate that concolic execution can provide comparable security gains as dynamic debloating schemes while addressing their core limitations. We discuss the design of \animatedead{} and measure the security gains of debloating via concolic execution in Chapter~\ref{chap:ad}.
+    \item We conduct an analysis on four popular PHP applications and characterize the source of code-bloat in them. After identifying the source of bloat, we propose two dynamic debloating approaches, namely file and function level debloating and evaluate their effectiveness in removing severe security vulnerabilities and reducing the attack surface of target web applications in Chapter~\ref{chap:lim}.
+    \item We propose a novel role-based debloating approach. We conduct a user study with 60 experienced administrators and developers to understand how different users of the same web application interact with various features. We demonstrate that one-size-fits-all debloating provides access to unnecessary features for a substantial group of users. Therefore, we cluster users with similar usage behavior together and assign them to a role. By providing a content-delivery platform based on reverse-proxies, we transparently route users to their respective debloated web applications. We present the results of this work in Chapter~\ref{chap:dbltr}. 
+    \item We characterize one of the main challenges of dynamic debloating systems as the collection of usage traces over long periods of time and the under-representation of unsuccessful/uncommon code paths (e.g., failed login attempts) in these traces. To that end, we propose the use of concolic execution to explore code paths of PHP applications based on the requests from the already available web server logs. We build a system named \animatedead{} and use it to perform a module-reachability analysis based on web application entry points. Using this information, we debloat web applications and demonstrate that concolic execution can provide comparable security gains as dynamic debloating schemes while addressing their core limitations. We discuss the design of \animatedead{} and measure the security gains of debloating via concolic execution in Chapter~\ref{chap:ad}.
 \end{itemize}
