Final end-to-end pass

--- a/sections/ad/1_introduction.tex
+++ b/sections/ad/1_introduction.tex
@@ -32,7 +32,7 @@ This is in contrast with dynamic debloating schemes that suffer from lack of gen
 
 We show that \animatedead{} is capable of analyzing popular PHP applications (i.e., phpMyAdmin, WordPress, HotCRP, and FluxBB). 
 We use the resulting code-coverage of our analysis to debloat web applications and show that by using concolic execution, we can produce debloated web applications that are 25-69\% smaller than their original versions, contain 55\% fewer calls to critical PHP APIs on average, and are exposed to 35-65\% fewer historic CVEs in our dataset, all while maintaining their required functionality. 
-In this paper, we make the following contributions:
+In this chapter, we make the following contributions:
 
 \begin{itemize}
     \item We develop and test a feature-complete concolic PHP emulator that supports PHP 5.x and PHP 7.x instructions and is capable of analyzing web applications with abstract inputs and environments.
