--- a/sections/chapter_six_conclusion.tex
+++ b/sections/chapter_six_conclusion.tex
@@ -6,7 +6,7 @@ To that end, we presented ``Less is More'', our dynamic debloating pipeline that
 Moreover, we introduced multiple metrics to quantify the security benefits of debloating web applications. 
 By evaluating our framework on four popular PHP applications (phpMyAdmin, MediaWiki, Magento, and WordPress) we demonstrated a reduction of 46.8\% on average in LLOC (Logical Lines Of Code) and a comparable reduction in the cyclomatic complexity of debloated applications. 
 We discussed how the structure of applications affects the debloating results (e.g., the monolithic design of WordPress leads to less debloating compared to modular web applications such as Magento). 
-From the perspective of code reuse attacks, we witnessed that debloating disrupts the majority of publicly known gadget chains used in object injection attacks. 
+From the perspective of code-reuse attacks, we witnessed that debloating disrupts the majority of publicly known gadget chains used in object injection attacks. 
 Similarly, debloating removed up to 60\% of high impact CVEs. 
 
 After demonstrating the effectiveness of debloating web applications from a security perspective, we proposed a novel approach for debloating. 
