--- a/sections/chapter_three_lim.tex
+++ b/sections/chapter_three_lim.tex
@@ -11,7 +11,7 @@ To that end, we built synthetic models of usage behavior through encoding online
 We then augmented this model by incorporating automated crawlers and testing mechanisms to further expand the code-coverage of the web applications. 
 
 Based on this modeling of the usage behavior, we characterized the main sources of bloat to be the third-party dependencies and unused modules and obscure features in web applications. 
-We then proposed source-code based (i.e., reduction in logical lines of code, and code complexity~\cite{gill1991cyclomatic}) and security based (i.e., removal of CVEs, and object injection gadget) as metrics to quantify the security benefits of debloating. 
+We then proposed source-code-based (i.e., reduction in logical lines of code, and code complexity~\cite{gill1991cyclomatic}) and security-based (i.e., removal of CVEs, and object injection gadget) as metrics to quantify the security benefits of debloating. 
 
 In the remainder of this chapter, we present the first analysis of the security benefits of debloating web applications. 
 We focus on four popular PHP applications and
