--- a/sections/chapter_five_ad.tex
+++ b/sections/chapter_five_ad.tex
@@ -6,17 +6,17 @@ So far, in the previous chapters we explored the security gains of debloating we
 We then proposed debloating mechanisms based on dynamic usage traces of users of the web applications to identify unused code sections and remove them through the process of debloating. 
 One of the main drawbacks of relying on dynamic traces is the overhead of the instrumentation to collect such code-coverage traces. 
 Moreover, dynamic code-coverage as a representation of feature usage for applications lacks generalizability. 
-As a result, the correct functionality of debloated web applications would heavily rely on extensive training phase to collect usage traces of web application users. 
+As a result, the correct functionality of debloated web applications would heavily rely on extensive training phase to collect representative usage traces. 
 Moreover, slight variations in the behavior of users can result in broken functionality (i.e., functionality that has been removed via debloating). 
-This, in part, can be attributed to the properties of line level code-coverage information which is skewed with an over representation of common and successful code paths (e.g., successful login), and under-representation of unsuccessful and less commonly used yet important features (e.g., forgot password, and error handlers) as evident by the debloated web applications by the Less is More~\cite{azad2019less}.
+This, in part, can be attributed to the properties of line level code-coverage information which is skewed with an over-representation of common and successful code paths (e.g., successful login), and under-representation of unsuccessful and less commonly used yet important features (e.g., forgot password, and error handlers) as evident by the debloated web applications by the ``Less is More''~\cite{azad2019less}.
 
 In this chapter we introduce our approach to address the aforementioned challenges in debloating web applications. 
-To this end, we propose the usage of the web server access logs to identify the web application entry points invoked by the users. 
+To this end, we propose the usage of the existing web server access logs to identify web application entry points invoked by the users. 
 By focusing on application entry points and abstracting the request parameters and the execution environment (e.g., state of the database), we allow for the exploration of the under-represented paths such as failed login attempts or database errors. 
 We perform concolic reachability analysis based on the application's entry points and extract the code-coverage of target web applications in an abstract environment, which allows our results to generalize for \emph{all} user inputs and database states. 
 We demonstrate that debloating via concolic execution improves the security of web applications by shrinking the size of their code by an average of 47\% and reducing critical API calls by 55\%, while removing 35-65\% of vulnerabilities for historic CVEs. 
-Concolic execution enables us to debloat web applications with comparable security improvements of dynamic debloating schemes without suffering from the runtime overhead, and the need for a training phase. 
-Moreover, using concolic execution for debloating reduces the likelihood of breakage by allowing users to perform all actions reachable from the analyzed entry points.
+Concolic execution enables us to debloat web applications with comparable security improvements to dynamic debloating schemes without suffering from the runtime overhead, and the need for an extensive training phase. 
+Moreover, using concolic execution for debloating, reduces the likelihood of breakage by allowing users to perform all actions reachable from the analyzed entry points.
 
 % After extracting the web application entry points from the web server logs, we perform a reachability analysis by exploring the possible execution paths in the web application through its source code via concolic execution. 
 % Concolic execution or concolic testing is a hybrid software verification technique that combines symbolic and concrete execution, by marking symbolic variables as concolic wherever possible~\cite{sen2007concolic}. 
