--- a/sections/chapter_two_relatedwork.tex
+++ b/sections/chapter_two_relatedwork.tex
@@ -16,7 +16,7 @@ At a high level, there are three mainstream approaches to debloating:
 
 Orthogonally, we can categorize debloating schemes by their underlying platform. 
 We start by reviewing the prior work on debloating for the web including the web servers, web browsers, and web applications. 
-Next, we discuss debloating approaches for other platforms, and finally, we go over the literature for module reachability analysis and symbolic execution. 
+Next, we discuss debloating approaches for other platforms, and finally, we go over the literature for module-reachability analysis and symbolic execution. 
 
 
 \section{Debloating for the web}
@@ -40,7 +40,7 @@ Koo et al. explored the debloating of web servers through the analysis of unused
 Ghavamnia et al. identified that applications such as web servers by design have separate phases (e.g., setup vs serve), and introduced the idea of temporal system call specialization to limit the available APIs based on the current status of the target application. 
 
 \paragraph{Debloating web applications:} For the server-side debloating, Boomsma et al. performed dynamic profiling of a custom web application (a PHP application from an industry partner)~\cite{boomsma2012Dead}. 
-The authors measured the time it takes for their dynamic profile system to get
+The authors measured the time it takes for their dynamic profiling system to record a
 complete coverage and the percentage of files that they could remove. Since they analyzed a proprietary web application, they were not able to report specifics
 in terms of the reduction of the programs attack surface, as that relates
 to CVEs. 
@@ -77,7 +77,6 @@ However, their system is not particularly well suited for web applications where
 Redini et al. utilized abstract interpretation to identify basic blocks within the code that are unused~\cite{redini2019b}. 
 They start by building the control flow graph of their target application and removing the disconnected nodes (i.e., basic blocks). 
 Mishra et al. explored ways to identify and build profiles of allow-lists for system calls and the parameters passed to them~\cite{mishra2018shredder,mishra2020saffire}. 
-Their threat model includes attackers who abuse code execution exploits and limits their ability to abuse the existing code from the applications and disrupts the gadget chains. 
 
 Debloating Kernels, containers and trusted execution environments have also received the attention of researchers~\cite{abubakar2021shard,mishra2021sgxpecial}. 
 Rastogi et al. looked at debloating a container by partitioning it into smaller and more secure ones~\cite{rastogi2017Cimplifier}. They perform dynamic analysis on system-call logs to determine which components and executables are used in a container, in order to keep them. 
@@ -85,7 +84,7 @@ Ghavamnia et al. looked at this problem from another perspective.
 They proposed Confine, their tool generates system call profiles for containers~\cite{259711}.
 Lastly, Abubakar et al. debloated the Linux kernel~\cite{abubakar2021shard} and Mishra et al. proposed an API specialization scheme for Intel SGX APIs~\cite{mishra2021sgxpecial}.
 
-\section{Module reachability analysis}
+\section{Module-reachability analysis}
 
 Control flow graphs (CFG) represent the transitions between the basic blocks of applications, and are commonly used for static analysis. 
 Call Graphs (CG) represent the calling relationship between the functions in an application. 
@@ -94,10 +93,10 @@ For instance, Redini et al. in their tool Bintrimmer showed that given the CFG o
 For web applications specifically, combining CGs with the information about the entry points of applications can be used to identify unreachable, but live code from the exercised entry points. 
 
 The main challenge of call graph generation specially for applications written in dynamic languages such as PHP is the absence of critical information for static analysis that is required to resolve file inclusions and determine the target of dynamic function calls. 
-More concretely, PHP allows developers to dynamically decide on which modules to load, and which function to call based on the runtime value of program variables. 
+More concretely, PHP allows developers to dynamically decide on which modules to load, and which functions to call based on the runtime value of program variables. 
 
 Historically, imperfect call graphs have been used for static analysis in the context of vulnerability discovery. 
-Moreover, previous work has addressed the uncertainty of static call graph generation through dynamic analysis. 
+Moreover, previous work have addressed the uncertainty of static call graph generation through dynamic analysis. 
 For instance, Alhuzaili et al. and Jensen et al. incorporated web crawlers as a pre-analysis step to exercise various parts of the web applications, and as a result they were able to collect dynamic traces of the file inclusions and function calls~\cite{alhuzali2018navex, jensen2012thaps}. 
 This way, they can aid their static analysis to build a more accurate call graph. 
 Nevertheless, crawlers cannot practically explore all the possible paths within an application. 
@@ -112,7 +111,7 @@ An alternative solution devised by researchers to resolve dynamic function calls
 For instance, Bulekov et al. modeled the file inclusions as regular expressions and mapped them to the underlying file system to identify potential candidate files~\cite{saphire}. 
 Similarly, Dahse et al. in their tool RIPS, which incorporates static taint analysis to identify injection style vulnerabilities~\cite{dahse2010rips}, relied on a limited scope variable analysis to resolve the strings used in file inclusions. 
 Pixy, one of the first papers to incorporate taint analysis to detect XSS vulnerabilities functions the same way~\cite{jovanovic2006pixy}. 
-Overall, we observe that the previous research relies on incomplete call graphs, yet it allows their static analysis tools to identify new vulnerabilities in web applications.
+Overall, we observe that previous research relies on incomplete call graphs, yet it allows their static analysis tools to identify new vulnerabilities in web applications.
 
 For debloating purposes, an unresolved call site or file inclusion in call graphs leads to error-prone debloating. 
 An unresolved call site that can potentially map to any function within the application means that debloating cannot safely reason about and remove any function from the web application. 
@@ -129,16 +128,16 @@ Conversely, IR-less implementations are harder to implement and need to support 
 At the same time, IR-less symbolic execution engines provide a better performance~\cite{poeplau2019systematic}.
 Symbolic execution engines commonly consist of a symbolic store to include the current variables and their value set and its constraints. 
 SMT solvers to evaluate the satisfiability of path conditions~\cite{moura2008z3}. 
-State managers to hold the current state of conditions and constraints of the undergoing evaluation along with a set of path constraints. 
-By iterating through the instructions of a program, the symbolic execution engine updates the aforementioned structures. 
+State managers to hold the current state of path conditions and constraints of the undergoing evaluation. 
+By iterating through instructions of a program, the symbolic execution engine updates the aforementioned structures. 
 For instance, if the engine is analyzing a code inside a branch statement, it assumes that the condition of the branch is already satisfied. 
 
 Symbolic execution can be used to automatically generate concrete test cases, as proposed by DART~\cite{sen2009dart, sen2005cute}. 
-Alternatively, symbolic execution is proven to be useful for vulnerability analysis (e.g., whether a certain path condition to sensitive program sinks is satisfiable)~\cite{5504701, wang2009intscope, cha2012unleashing, cadar2008klee}. 
+Alternatively, symbolic execution is proven to be useful for vulnerability analysis (e.g., whether a certain path condition leading to sensitive program sinks is satisfiable)~\cite{5504701, wang2009intscope, cha2012unleashing, cadar2008klee}. 
 Fuzzing tools also benefit from symbolic execution~\cite{godefroid2012sage}.
 More interestingly, constraint solvers and variations of symbolic execution has been used for automatic exploit generation (i.e., generating an input that satisfies the path constraints to reach and exploit a known vulnerability)~\cite{alhuzali2018navex, avgerinos2014automatic}.
 
-Concolic execution refers to the interoperation symbolic analysis and concrete execution. 
+Concolic execution refers to the interoperation of symbolic analysis and concrete execution. 
 In this method, programs are executed with concrete values, and parameters from unknown sources (e.g., user input, and the environment) are replaced by symbolic values. 
 Concolic execution engines commonly rely on SMT solvers to generate concrete inputs that satisfy the existing path constraints. 
 By replacing symbolic values with concrete ones, we reduce the overhead and increase the performance of the analysis. 
@@ -152,7 +151,7 @@ Similarly, Jensen et al. aid their static analysis by resolving dynamic file inc
 They then perform static analysis to identify XSS vulnerabilities and finally validate their findings using symbolic execution. 
 In both papers, the authors use symbolic execution to verify the reachability of the vulnerable sinks. 
 
-In a worker closer to ours, Naderi et al. built a PHP emulator and used it in combination with counterfactual execution to uncover obfuscated PHP malware~\cite{naderi2019cubismo,naderi2019malmax}. 
+In a work closer to ours, Naderi et al. built a PHP emulator and used it in combination with counterfactual execution to uncover obfuscated PHP malware~\cite{naderi2019cubismo,naderi2019malmax}. 
 Counterfactual execution is a method of program exploration under which all the loops are unrolled and branches are explored regardless of the satisfiability of their conditions. 
 While PHP malware uses specific APIs to remain hidden and perform its malicious actions, complex PHP applications interact with a large number of PHP APIs. 
 To be able to perform an end-to-end analysis of these applications, we extended MalMax by adding support for symbolic execution, and implementing the features used in popular PHP applications, which we discuss in more detail in Chapter~\ref{chap:ad}. 
@@ -169,4 +168,4 @@ The simplest form of path exploration is breadth-first-search and depth-first-se
 Next to that, other heuristics such as ``reducing the number of redundant path explorations'', ``maximizing code-coverage'', and ``guiding the execution towards security sensitive APIs'' are implemented by researchers in tools such as KLEE~\cite{cadar2008klee}, EXE~\cite{cadar2008exe}, Mayhem~\cite{cha2012unleashing}, S2E~\cite{cha2012unleashing}, and AEG~\cite{avgerinos2014automatic}. 
 We incorporate a subset of these mechanisms in our work, which we discuss later in Chapter~\ref{chap:ad}. 
 To overcome the second challenge, we designed a feature-complete PHP emulator to closely resemble the outcome of program executions with symbolic variables. 
-Finally, we argue that debloating schemes based on concolic execution can benefit from a loose constraint solving without requiring full SMT solvers, we discuss this topic in more detail in Chapter~\ref{chap:ad}. 
+Finally, we argue that debloating schemes based on concolic execution can benefit from loose constraint solving without requiring full SMT solvers, we discuss this topic in more detail in Chapter~\ref{chap:ad}. 
