Fix typo in thesis statement

--- a/sections/chapter_one_intro.tex
+++ b/sections/chapter_one_intro.tex
@@ -22,7 +22,7 @@ To measure the performance of debloating schemes in reducing the attack surface 
 
 \section{Thesis statement and contributions}
 
-Our thesis statement for this dissertation is that \textit{``Modern web applications expose an unnecessarily large attack surface due to code-bloat. Software debloating can effectively identify and remove the unused code and therefore protect web applications against the exploitation of vulnerabilities that reside in the those modules.''}
+Our thesis statement for this dissertation is that \textit{``Modern web applications expose an unnecessarily large attack surface due to code-bloat. Software debloating can effectively identify and remove the unused code and therefore protect web applications against the exploitation of vulnerabilities that reside in the removed code.''}
 
 In this dissertation, we demonstrate the effectiveness of software debloating techniques in reducing the attack surface of web applications through source code and security metrics. 
 Moreover, we design and develop frameworks to debloat popular web applications and quantify their effectiveness in reducing their attack surface. The main contributions of this dissertation are as follows:
